#ifndef COLOR_H
#define COLOR_H

enum Color {
    YELLOW,
    WHITE,
    BLACK,
    RED
};

#endif
